# ros2_algo

./: .gitignore  README.md
src/multi_algo_interfaces/: CMakeLists.txt  package.xml
src/multi_algo_manager/: README.txt  package.xml  setup.cfg  setup.py
src/multi_algo_manager/launch/: multi_algo_manager.launch.py
src/multi_algo_manager/multi_algo_manager/: algo_manager_node.py  multi_algo_manager
src/multi_algo_manager/multi_algo_manager/algos/: base.py  channel_monitor.py  device_check.py  line_integrity.py  logger.py  trash_detect.py
src/multi_algo_manager/multi_algo_manager/srv/: AlgoControl.srv
